# faulhaber_com

./: CMakeLists.txt  Documentation.odt  README.md  build  run
cmake-tools/: get_git_source_repo.cmake
common/: CMakeLists.txt  gettime.cpp  gettime.h  logging.cpp  logging.h  units.h  util.cpp  util.h
faulhaber/: CMakeLists.txt
faulhaber/src/faulhaber/: debug_tool.cpp  faulhaber_highlevel.h  faulhaber_low_level_SerialPort.c  faulhaber_low_level_SerialPort.h
faulhaber/tests/: test_faulhaber_low_level.cc
